tests/compile-fail/compile_fail__image_source_in_std.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected image_source
   ┌─ <input>:18:30
   │
18 │         #pragma image_source "tests/anm-compile/th12-embedded-image-source.anm"
   │                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image_source not valid in this format


